[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotspeak"
version = "0.0.1"
authors = [
    { name="Adam Badr", email="" },
    { name="Abror Shopulatov", email="murodbeck@proton.me" },
    { name="Yelarys Yertaiuly", email="" },
]
maintainers = [
    { name="Adam Badr", email="" },
    { name="Abror Shopulatov", email="murodbeck@proton.me" },
    { name="Yelarys Yertaiuly", email="" },
]
license = {file = "LICENSE"}
keywords = ["robotspeak", "programming-language", "robot", "2d-environment", "interpreter"]
description = "robotspeak - a programming language for controlling the actions and movements of a small robot, within a virtual 2D environment."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Education",
    "Topic :: Games/Entertainment :: Simulation"
]

[project.urls]
"Homepage" = "https://github.com/Adam-Badr/UG1FallPythonrobot"
"Bug Tracker" = "https://github.com/Adam-Badr/UG1FallPythonrobot/issues"
"Repository" = "https://github.com/Adam-Badr/UG1FallPythonrobot"